--- a/demo.html
+++ b/demo.html
@@ -8,10 +8,30 @@
 		<a href="#" class="modale-trigger" data-modale-id="foo">Trigger foo</a>
 		<button class="modale-trigger" data-modale-id="bar">Trigger bar</button>
 		<div id="foo" class="modale-wrapper">
-			<div class="modale foo">foo</div>
+			<div class="modale foo">
+				<div class="modale-header">
+					<h2>foo</h2>
+				</div>
+				<div class="modale-content">
+					<p>foofoofoo</p>
+				</div>
+				<div class="modale-footer">
+					<a href="#" class="modale-hide">X</a>
+				</div>
+			</div>
 		</div>
 		<div id="bar" class="modale-wrapper">
-			<div class="modale bar">bar</div>
+			<div class="modale foo">
+				<div class="modale-header">
+					<h2>bar</h2>
+				</div>
+				<div class="modale-content">
+					<p>barbarbar</p>
+				</div>
+				<div class="modale-footer">
+					<button class="modale-hide">X</button>
+				</div>
+			</div>
 		</div>
 		<script src="lib/less.min.js" type="text/javascript"></script>
 		<script src="lib/jquery.min.js" type="text/javascript"></script>
