--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 		<a href="#" class="modale-trigger" data-modale-id="foo">Trigger foo</a>
 		<button class="modale-trigger" data-modale-id="bar">Trigger bar</button>
 		<div id="foo" class="modale-wrapper">
-			<div class="modale foo">
+			<div class="modale foo" data-fade-in="1500">
 				<div class="modale-header">
 					<h2>foo</h2>
 				</div>
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div id="bar" class="modale-wrapper">
-			<div class="modale foo">
+			<div class="modale bar">
 				<div class="modale-header">
 					<h2>bar</h2>
 				</div>
