--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 		<a href="#" class="modale-trigger" data-modale-id="foo">Trigger foo</a>
 		<button class="modale-trigger" data-modale-id="bar">Trigger bar</button>
 		<div id="foo" class="modale-wrapper">
-			<div class="modale foo" data-fade-in="1500">
+			<div class="modale foo" data-fade-in="0">
 				<div class="modale-header">
 					<h2>foo</h2>
 				</div>
@@ -26,6 +26,15 @@
 					<h2>bar</h2>
 				</div>
 				<div class="modale-content">
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
+					<p>barbarbar</p>
 					<p>barbarbar</p>
 				</div>
 				<div class="modale-footer">
