Compiled LESS is king.

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Demo</title>
-		<link href="css/jquery.modale.less" rel="stylesheet/less" type="text/css">
+		<link href="css/jquery.modale.css" rel="stylesheet" type="text/css">
+		<link href="css/override.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<a href="#" class="modale-trigger" data-modale-id="foo">Trigger foo</a>
@@ -42,7 +43,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="lib/less.min.js" type="text/javascript"></script>
 		<script src="lib/jquery.min.js" type="text/javascript"></script>
 		<script src="src/jquery.modale.js" type="text/javascript"></script>
 	</body>
