Some CSS stuff.

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
 		<a href="#" class="modale-trigger" data-modale-id="foo">Trigger foo</a>
 		<button class="modale-trigger" data-modale-id="bar">Trigger bar</button>
 		<div id="foo" class="modale-wrapper">
-			<div class="modale foo" data-fade-in="0">
+			<div class="modale foo" data-fade-in="0" data-fade-out="0" data-overlay="false">
 				<div class="modale-header">
 					<h2>foo</h2>
 				</div>
